/*
 * Starcoder - a server to read/write data from/to the stars, written in Go.
 * Copyright (C) 2018 InfoStellar, Inc.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
syntax = "proto3";

package grgrpc;

// The PMT Message sink
service MessageSink {
  // Send a serialized PMT message
  rpc SendMessage (SendMessageRequest) returns (SendMessageResponse) {}
}

// The message containing a serialized PMT
message SendMessageRequest {
  // Serialized arbitrary PMT message
  repeated bytes bytes = 1;
}

// Response to a SendMessageRequest
message SendMessageResponse {
  // Response status
  enum Status {
    // Successfully sent message
    SUCCESS = 0;

    // Unknown error
    UNKNOWN_ERROR = 255;
  }

  // Response status
  Status status = 1;
}
